bk_ida/gccida/c1/new_cfi
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_cfi/src/dwarf2out.c:978:12: error: expected expression
*( _OWORD *)&result->dw_cfi_oprnd1.dw_cfi_reg_num = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_cfi/src/dwarf2out.c:978:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->dw_cfi_oprnd1.dw_cfi_reg_num = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_cfi/src/obj/dwarf2out.o] Error 1
